--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
       </div>
       <br/><br/>
-      <a class="button is-link" href="tableau-fr.html">Voir le tableau</a>
+      <a class="button is-link" href="./tableau-fr.html">Voir le tableau</a>
      </section>
   <p>Page initiale du PPE.</p>
 </body>
